/*
 * $Id: ChangeLog,v 1.599 2009-07-19 02:55:13 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-07-18 21:53 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_form.prg
    ! Fixed DRAW commands repainting.

2009-07-18 20:50 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_menu.prg
    ! Fixed main menu refresh when any item is changed.
    * TMenu:EndMenu() and TMenuItem():EndPopUp() methods redefined.

2009-06-23 11:35 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_label.prg
    ! fixed autosize little bug when are changed font, size or atributes in runtime.

2009-06-19 10:51 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_msgbox.prg
    * changed static function autotype to public function because may be usefull

2009-06-18 17:24 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/miniprint.prg
    !fixed problem with zoom (exploted with new (on change) changes)

2009-06-12 20:50 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * ./compile_bcc.bat
    * Reverted path's change.
  * source/h_button.prg
    ! Fixed ON CHANGE processing when it's made programatically.
  * source/common_make.bat
  - source/c_spinner.c
  * source/h_spinner.prg
  * source/makelib_mingw.bat
    ! Fixed ::RangeMin and ::RangeMax methods.
    * Moved C code from c_spinner.c to h_spinner.prg file.
    - c_spinner.c removed.
  * source/h_error.prg
    ! Fixed _OOHG_AllVars warning.

2009-06-11 22:34 UTC-0400 Ciro Vargas C. <cvc@oohg.org>
  * source/h_button.prg
    * return to previous version.
  * source/h_dialogs.prg
    ! fixed browse for folder borrowed from extended.

2009-06-07 22:02 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Fixed COMBOBOXTEXT value assignment.
      Reported and fixed by Fernando Yurisich.
