@@ -1,11 +1,15 @@
 /*
- * $Id: ChangeLog,v 1.599 2009-07-19 02:55:13 guerra000 Exp $
+ * $Id: ChangeLog,v 1.600 2009-07-24 23:59:22 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2009-07-24 19:04 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_windows.c
+    ! Workaround for system lock under Windows Vista.
 
 2009-07-18 21:53 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_form.prg
